# MayaKinect

./: CMakeLists.txt  LICENSE.txt  README.md
models/: skelton.fbx
script/: loadKinect.py  panel.py
src/: closekinectcmd.cpp  closekinectcmd.h  importcharactercmd.cpp  importcharactercmd.h  kincetcontroller.cpp  kincetcontroller.h  kinectdevice.cpp  kinectdevice.h  kinectupdateskeletoncmd.cpp  kinectupdateskeletoncmd.h  main.cpp  mayakinectcmd.cpp  mayakinectcmd.h  skeletonbuilder.cpp  skeletonbuilder.h
